[package]
name = "erust-turret-async"
version = "0.1.0"
edition = "2021"

[dependencies]
async-scheduler = { git = "https://github.com/rblaze/rust-async-scheduler.git" }
calibration = { path = "../../calibration" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
critical-section = { version = "1.1" }
embedded-hal = "0.2"
fastrand = { version = "2.0", default-features = false }
fugit = "0.3"
futures = { version = "0.3", default-features = false }
nb = "1.0"
num = { version = "0.4", default-features = false }
once_cell = { version = "1.18", default-features = false, features = [
    "critical-section",
] }
portable-atomic = { version = "1", default-features = false }
servo = { git = "https://github.com/rblaze/erust-servo.git" }
simplefs = { git = "https://github.com/rblaze/rust-simplefs.git" }
spi-memory = "0.2"
stm32f1xx-hal = { version = "0.10", features = ["stm32f103", "rt", "medium"] }
vl53l1x = { git = "https://github.com/rblaze/erust-VL53L1X.git" }

# panic-halt = "0.2.0"
panic-probe = { version = "0.3", features = ["print-rtt"] }
rtt-target = "0.4"

[[bin]]
name = "erust-turret-async"
test = false
bench = false
doctest = false
